...
  final _uuid = const Uuid();

  MockMiGenesysService() {
    _journeys.add(
      HealthJourney(
        id: _uuid.v4(),
        title: 'Myocardial Infarction',
        startDate: DateTime.now().subtract(const Duration(days: 10)),
        period: 'Ongoing',
        medications: [
            Medication(
              brandName: 'Plavix',
              genericName: 'Clopidogrel',
...
